<resources>
    <string name="app_name">GraduationProject</string>
    <string name="my_venues">My Venues</string>
    <string name="full_name">Full Name</string>
    <string name="the_vendor_profile_picture">The vendor profile picture</string>
    <string name="the_venue_name">The Venue Name</string>
    <string name="book_now">Book Now</string>
    <string name="see_details">See Details</string>
    <string name="the_venue_picture">The Venue Picture</string>
    <string name="venue_name">Venue Name</string>
    <string name="todo">TODO</string>
    <string name="view_the_venue">View the venue</string>
    <string name="edit_the_venue">Edit the venue</string>
    <string name="enter_the_booking_details_below">Enter the booking details below</string>
    <string name="booking_date">Booking Date</string>
    <string name="enter_the_payment_details_below">Enter the payment details below</string>
    <string name="card_expire_date">Card Expire Date</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvc">CVC</string>
    <string name="cancel">Cancel</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Content Description Favorite</string>
    <string name="search">Search</string>
    <string name="content_description_search">Content Description Search</string>
    <string name="more">More</string>
    <string name="content_description_more">Content Description More</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="new_to_this_app">New to this app ?</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="choose_the_subscription_type">Choose the Subscription Type :</string>
    <string name="vendor">Vendor</string>
    <string name="customer_choice">Customer Choice</string>
    <string name="customer">Customer</string>
    <string name="log_out">Log Out</string>
    <string name="new_password">New Password</string>
</resources>