<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendormyveneus">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_menu_24dp"
            app:title="My Venues"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/venueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="105dp"
        android:text="@string/venue_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/viewMyVenueButton"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        tools:layout_editor_absoluteY="146dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/venueName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="126dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/editMyVenueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_the_venue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMyVenueButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <ImageButton
        android:id="@+id/viewMyVenueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="134dp"
        android:contentDescription="@string/view_the_venue"
        app:layout_constraintStart_toEndOf="@+id/venueName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_preview_24" />

</androidx.constraintlayout.widget.ConstraintLayout>